--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,8 @@
         <h4>Menu</h4>     
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/admin">Admin</a></li>
+          <li><a href="/dashboard">Dashboard</a></li>
+          <li><a href="/admin">Admin</a></li>          
         </ul>
 
         <h4>All Models</h4>
