--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,26 @@
-<%= bar_chart @foods.group(:category_id).count %>
+<div>
+  <h4>1. The number of order every date</h4>
+</div>
+
+<div>
+  <h4>2. The total price of order every date</h4>
+</div>
+
+<div>
+  <h4>3. The number of order for each food</h4>
+</div>
+
+<div>
+  <h4>4. The total price of order for each food</h4>
+</div>
+
+<div>
+  <h4>5. The number of order from each restaurant</h4>
+</div>
+
+<div>
+  <h4>5. The total price of order from each restaurant</h4>
+</div>
+
+
+<%= line_chart @foods.group(:category_id).count %>
