--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,6 +14,7 @@
     <th>Address</th>
     <th>E Mail</th>
     <th>Payment Type</th>
+    <th>Date</th>
     <th>Total</th>
     <th>Voucher</th>
     <th>Unit</th>
@@ -28,6 +29,7 @@
       <td><%= order.address %></td>
       <td><%= order.email %></td>
       <td><%= order.payment_type %></td>
+      <td><%= order.created_at %></td>
       <td><%= order.total_price %></td>    
       <td><%= order.voucher.try(:kode) %></td>
       <td><%= order.voucher.try(:unit) %></td>
