--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,10 +10,13 @@
 
 <div>
   <h4>3. The number of order for each food</h4>
+  <%# @number_of_order_for_each_food.to_json %>
+  <%= column_chart @number_of_order_for_each_food %>
 </div>
-
+  
 <div>
   <h4>4. The total price of order for each food</h4>
+  <%= column_chart @total_price_of_order_for_each_food %>
 </div>
 
 <div>
