--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -21,8 +21,11 @@
 
 <div>
   <h4>5. The number of order from each restaurant</h4>
+  <%# @number_of_order_from_each_restaurant.to_json %>
+  <%= column_chart @number_of_order_from_each_restaurant %>
 </div>
 
 <div>
   <h4>5. The total price of order from each restaurant</h4>
+  <%= column_chart @total_price_of_order_from_each_restaurant %>
 </div>
